snapshots/syntax/library/functions/string/formatnumber/formatnumber_recordset.snap
---
source: src/syntax/library/functions/string/formatnumber.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: formatted
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FormatNumber
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: rs
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Fields
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: fieldName
                            - kind: RightParenthesis
                              text: )
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: Value
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: decimals
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
